--- a/css/style.css
+++ b/css/style.css
@@ -217,14 +217,14 @@ body {
   border-radius: 4px;
   border: 1px solid transparent;
   padding: 7px;
-  background-color: var(--accent-color);
 
   font-weight: 700;
   font-size: 12px;
   line-height: 1.87;
-
   letter-spacing: 0.06em;
+
   cursor: pointer;
+  background-color: var(--accent-color);
   transition: var(--anim-shadow-slow);
 }
 
@@ -261,7 +261,8 @@ body {
 
   background-color: rgba(0, 0, 0, 0.2);
 
-  transition: opacity var(--anim-fast), visibility var(--anim-fast);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -278,6 +279,7 @@ body {
 
   width: 528px;
   min-height: 581px;
+  border-radius: 4px;
 
   background-color: #ffffff;
   animation: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
@@ -313,6 +315,173 @@ body {
   box-shadow: -4px 0px 8px rgba(0, 0, 0, 0.04), -2px 0px 4px rgba(0, 0, 0, 0.08),
     -1px 0px 3px rgba(0, 0, 0, 0.16);
 }
+
+.close-btn:hover .modal-icon {
+  fill: var(--accent-color);
+}
+
+/* --------------FORMA!!!-------------- */
+.form {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+}
+.form-title {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+
+  text-align: center;
+}
+.form-block {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.top-title {
+  margin-top: 12px;
+}
+.form-label,
+.comment-label {
+  display: flex;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  margin-bottom: 4px;
+
+  color: var(--secondary-text-color);
+}
+.form-input {
+  width: 100%;
+  margin: 0;
+  padding: 11px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+  border-color: var(--accent-color);
+}
+
+.form-input:focus ~ .input-icon {
+  fill: var(--accent-color);
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(25%);
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment {
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  height: 120px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment:focus {
+  border-color: var(--accent-color);
+}
+
+.form-block__chek {
+  padding-left: 0px;
+  margin-top: 25px;
+  margin-bottom: 30px;
+}
+.policy-label {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0px 15px 0px 15px;
+
+  font-size: 14px;
+  line-height: 1.17;
+
+  color: var(--secondary-text-color);
+}
+.form-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.form-checkbox:checked + .icon-chek {
+  transform: scale(1.2);
+  border-color: transparent;
+  background-color: var(--accent-color);
+  background-image: url('../images/icon-check.svg');
+  background-size: contain;
+  background-origin: border-box;
+}
+
+.icon-chek {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 8px;
+
+  border: 2px solid #212121;
+  border-radius: 2px;
+
+  transform: var(--anim-shadow-slow);
+}
+
+.label-text {
+  transition: var(--anim-shadow-slow);
+}
+.form-checkbox:checked ~ .label-text {
+}
+.policy-link {
+  margin-left: 3px;
+  color: #2196f3;
+}
+.form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 10px 56px;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4pxrgba (0, 0, 0, 0.15);
+  color: var(--white-color);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-btn:focus,
+.form-btn:hover {
+  background-color: #188ce8;
+}
+/* --------------END FORMA!!!-------------- */
 
 /* NEW Section  */
 .section {
