--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
   color: var(--secondary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -203,9 +204,11 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+
   text-transform: uppercase;
   text-align: center;
   max-width: 696px;
+
   letter-spacing: 0.06em;
   color: var(--white-color);
 }
@@ -300,10 +303,12 @@ body {
   justify-content: center;
   right: 8px;
   top: 8px;
+
   background-color: transparent;
   border-radius: 50%;
   width: 30px;
   height: 30px;
+
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
@@ -359,6 +364,7 @@ body {
   padding: 11px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -372,12 +378,14 @@ body {
 
 .input-icon {
   position: absolute;
+  display: inline-block;
   top: 50%;
   left: 15px;
+
+  width: 18px;
+  height: 18px;
+
   transform: translateY(25%);
-  display: inline-block;
-  width: 12px;
-  height: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -701,6 +709,12 @@ body {
   color: var(--white-color);
 }
 
+.footer-section {
+  display: flex;
+  padding: 60px 0px 60px 0px;
+  gap: 70px;
+}
+
 /* PORTFOLIO */
 
 /* Section Button  */
@@ -742,12 +756,6 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* Page block  */
-.footer-section {
-  display: flex;
-  padding: 60px 0px 60px 0px;
-  gap: 70px;
-}
 /* Social block  */
 .social-section__text {
   padding: 20px 0px 10px 0px;
@@ -813,6 +821,71 @@ body {
 .address {
   font-style: normal;
 }
+
+/* Footer FORM */
+
+.footer-submit {
+  padding: auto;
+}
+
+.footer-submit__text {
+  padding: 20px 0px 10px 0px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14px;
+  text-transform: uppercase;
+  color: var(--white-color);
+}
+.footer-submit__form {
+  display: flex;
+}
+.footer-submit__label {
+}
+.footer-submit__input {
+  width: 358px;
+  height: 100%;
+  margin: 0;
+  padding: 13px 16px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+
+  background-color: var(--hero-background-color);
+  color: var(--white-color);
+}
+.footer-submit__btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+
+  margin-left: 12px;
+  padding: 8px 29px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  color: var(--white-color);
+
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+
+  cursor: pointer;
+  min-height: 43px;
+}
+
+.footer-submit__btn::after {
+  content: '';
+  display: inline-block;
+  width: 24px;
+  height: 20px;
+  margin-left: 10px;
+  background-image: url(../images/icon-send.svg);
+}
+
 /*  Client Block  */
 .client-list {
   display: flex;
